--- a/6archivos/querys/DBeaverData/workspace6/General/.dbeaver/project-metadata.json
+++ b/6archivos/querys/DBeaverData/workspace6/General/.dbeaver/project-metadata.json
@@ -1,1 +1,1 @@
-{"resources":{"Scripts/Script-controleg-nuevo.sql":{"default-datasource":"postgres-jdbc-18dc852ab17-55ef356cb5b6152e","default-catalog":"bd_cge_controleg_210223","default-schema":"public"}}}
+{"resources":{"Scripts/Script-controleg-nuevo.sql":{"default-datasource":"postgres-jdbc-18dc852ab17-55ef356cb5b6152e","default-catalog":"bd_cge_controleg_210223","default-schema":"public"},"Scripts/Script.sql":{"default-datasource":"postgres-jdbc-18dc852ab17-55ef356cb5b6152e","default-catalog":"bd_cge_controleg_210223","default-schema":"public"}}}
